[gd_scene load_steps=38 format=2]

[ext_resource path="res://Dialogue Headshots/robot_guide_face_still.png" type="Texture" id=1]
[ext_resource path="res://UI/nightsky1.png" type="Texture" id=2]
[ext_resource path="res://UI/walkie_talkie_1.png" type="Texture" id=3]
[ext_resource path="res://UI/radio_signal.png" type="Texture" id=4]
[ext_resource path="res://Music and Sounds/Mobile_Game_UI_Alien_Chatter_Box_2.wav" type="AudioStream" id=5]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/Pixel GUI Buttons Black Wide Pressed.png" type="Texture" id=7]
[ext_resource path="res://World/WalkiePickup.gd" type="Script" id=8]
[ext_resource path="res://UI/walkie_talkie_1_w_hand.png" type="Texture" id=9]
[ext_resource path="res://UI/5_light_meter.png" type="Texture" id=10]
[ext_resource path="res://Effects/sparkle_one.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 57, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 114, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 171, 0, 57, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.0862745, 0.0666667, 0.0627451, 1 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 18, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 18, 0, 18, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 36, 0, 18, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 54, 0, 18, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 18, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 11 )
region = Rect2( 90, 0, 18, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 11 )
region = Rect2( 108, 0, 18, 32 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 13 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 13 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 13 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 20 ), SubResource( 21 ), SubResource( 20 ), SubResource( 21 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 57, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 114, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 171, 0, 57, 64 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="WalkiePickup" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.164117, 0.166329 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -9, -8 )
scale = Vector2( 0.35, 0.4 )
frames = SubResource( 7 )
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 8 )

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 0, -20 )

[node name="Panel" type="Panel" parent="PopupDialog"]
margin_left = -198.0
margin_top = -182.0
margin_right = 206.0
margin_bottom = 232.0
rect_scale = Vector2( 1.1, 1.1 )
custom_styles/panel = SubResource( 24 )

[node name="Panel2" type="Panel" parent="PopupDialog"]
margin_left = -178.0
margin_top = -163.0
margin_right = 227.0
margin_bottom = 255.0

[node name="Sprite3" type="Sprite" parent="PopupDialog"]
position = Vector2( -3.33333, 63.3333 )
scale = Vector2( 6, 6 )
texture = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PopupDialog/Sprite3"]
position = Vector2( 7.69841, -5.79364 )
scale = Vector2( 0.476191, 0.327381 )
frames = SubResource( 32 )
frame = 6
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="PopupDialog/Sprite3"]
position = Vector2( 14, -5.317 )
scale = Vector2( 0.476191, 0.327381 )
frames = SubResource( 32 )
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="PopupDialog/Sprite3"]
position = Vector2( 17.6984, -5.31746 )
scale = Vector2( 0.476191, 0.327381 )
frames = SubResource( 32 )
frame = 4
playing = true

[node name="Sprite2" type="Sprite" parent="PopupDialog"]
position = Vector2( 30, 30 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog"]
margin_left = 43.0
margin_top = 8.0
margin_right = 165.0
margin_bottom = 84.0
rect_scale = Vector2( 0.87, 0.9 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_text = "Excellent, you've found the 2-way radio
That I left for you."
text = "Excellent, you've found the 2-way radio
That I left for you."

[node name="AnimatedSprite" type="AnimatedSprite" parent="PopupDialog"]
modulate = Color( 0.337255, 1, 0, 0.788235 )
position = Vector2( 75, 80 )
scale = Vector2( 4, 1.31868 )
frames = SubResource( 23 )
frame = 7
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="PopupDialog2" type="PopupDialog" parent="."]
rect_scale = Vector2( 0.65, 0.65 )

[node name="Sprite" type="Sprite" parent="PopupDialog2"]
position = Vector2( 59, 12 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog2"]
margin_left = -24.6154
margin_top = -33.8462
margin_right = 148.385
margin_bottom = -17.8462
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]2-way Radio obtained"
text = "2-way Radio obtained"

[node name="Sprite2" type="Sprite" parent="PopupDialog2"]
position = Vector2( 58.4615, 3.07692 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PopupDialog2"]
position = Vector2( 48, -10 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 19 )
playing = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Chatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.2

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
